--- a/src/Formee/Clients/Clients.Web.Components/_Imports.razor
+++ b/src/Formee/Clients/Clients.Web.Components/_Imports.razor
@@ -30,6 +30,7 @@
 @using Clients.Web.Components.Components.Typography;
 @using Clients.Web.Components.Components.Forms;
 @using Clients.Web.Components.Components.Modals
+@using Clients.Web.Components.Shared
 
 @using Microsoft.AspNetCore.Components;
 @using Microsoft.AspNetCore.Components.Forms;
