--- a/src/Formee/Clients/Client.Web/App.razor
+++ b/src/Formee/Clients/Client.Web/App.razor
@@ -1,4 +1,5 @@
 ﻿@using Microsoft.AspNetCore.Components.Authorization
+@using Clients.Web.Components.Shared
 
 <CascadingAuthenticationState>
     <Router AppAssembly="@typeof(MainLayout).Assembly">
