--- a/src/Formee/Clients/Clients.Web.Components/Components/Loaders/FmNotFound.razor.css
+++ b/src/Formee/Clients/Clients.Web.Components/Components/Loaders/FmNotFound.razor.css
@@ -3,7 +3,8 @@
 }
 
 .fm-notfound__wrapper-img {
-    width: 100%;
+    width: 300px;
+    display: block;
     height: auto;
     margin: 0 auto;
 }
