--- a/src/Formee/Clients/Clients.Web.Components/Pages/Dashboard/Identity/Upsert.razor
+++ b/src/Formee/Clients/Clients.Web.Components/Pages/Dashboard/Identity/Upsert.razor
@@ -47,7 +47,7 @@
                                                           Text="Basic Info"
                                                           TextAlign="left"
                                                           Icon="fa-solid fa-plus-circle"
-                                                          IconSize="1.5rem"/>
+                                                          IconSize="1.5rem" />
                                         </FmHeader>
                                         <FmBody>
                                             <Grid Gap="@GridGap.Large">
@@ -60,9 +60,9 @@
 
                                                             <SfTextBox ID="@nameof(User.UserName)"
                                                                        @bind-Value="User.UserName"
-                                                                       Readonly="_isDeleteUpsert"/>
+                                                                       Readonly="_isDeleteUpsert" />
 
-                                                            <ValidationMessage For="() => User.UserName"/>
+                                                            <ValidationMessage For="() => User.UserName" />
                                                         </Child>
                                                     </GridItem>
 
@@ -74,9 +74,9 @@
 
                                                             <SfTextBox ID="@nameof(User.FirstName)"
                                                                        @bind-Value="User.FirstName"
-                                                                       Readonly="_isDeleteUpsert"/>
+                                                                       Readonly="_isDeleteUpsert" />
 
-                                                            <ValidationMessage For="() => User.FirstName"/>
+                                                            <ValidationMessage For="() => User.FirstName" />
                                                         </Child>
                                                     </GridItem>
 
@@ -88,13 +88,38 @@
 
                                                             <SfTextBox ID="@nameof(User.LastName)"
                                                                        @bind-Value="User.LastName"
-                                                                       Readonly="_isDeleteUpsert"/>
+                                                                       Readonly="_isDeleteUpsert" />
 
-                                                            <ValidationMessage For="() => User.LastName"/>
+                                                            <ValidationMessage For="() => User.LastName" />
                                                         </Child>
                                                     </GridItem>
+
                                                 </Items>
                                             </Grid>
+                                        </FmBody>
+                                    </FmCard>
+                                </Child>
+                            </GridItem>
+                            
+                            <GridItem ColumnSize="@GridSize.GridItemXLarge">
+                                <Child>
+                                    <FmCard Classes="p-2"
+                                            IsHoverable="false">
+                                        <FmHeader>
+                                            <FmTypography Type="@Typography.LevelTwo"
+                                                          Text="Upload Avatar"
+                                                          TextAlign="left"
+                                                          Icon="fa-solid fa-file-image"
+                                                          IconSize="1.5rem" />
+                                        </FmHeader>
+                                        <FmBody>
+                                            <div>
+                                                <SfUploader AllowedExtensions=".png, .jpg, .jpeg">
+                                                    <UploaderAsyncSettings SaveUrl=@($"http://localhost:5000/api/identity/users/avatar/{AppStateService.User.Id}") />
+                                                </SfUploader>
+
+                                                <ValidationMessage For="() => User.LastName" />
+                                            </div>
                                         </FmBody>
                                     </FmCard>
                                 </Child>
@@ -109,25 +134,25 @@
                                                           Text="Create"
                                                           TextAlign="left"
                                                           Icon="fa-solid fa-plus-circle"
-                                                          IconSize="1.5rem"/>
+                                                          IconSize="1.5rem" />
                                         </FmHeader>
                                         <FmBody>
                                             <div>
                                                 @if (UpsertType == "update")
                                                 {
                                                     <SfButton CssClass="e-primary"
-                                                              IconCss="fa-solid fa-trash"
-                                                              IconPosition="IconPosition.Right"
-                                                              IsPrimary="true">
+                                                          IconCss="fa-solid fa-trash"
+                                                          IconPosition="IconPosition.Right"
+                                                          IsPrimary="true">
                                                         @UpsertType.ToUpper()
                                                     </SfButton>
                                                 }
                                                 else if (UpsertType == "delete")
                                                 {
                                                     <SfButton CssClass="e-primary"
-                                                              IconCss="fa-solid fa-trash"
-                                                              IconPosition="IconPosition.Right"
-                                                              IsPrimary="true">
+                                                          IconCss="fa-solid fa-trash"
+                                                          IconPosition="IconPosition.Right"
+                                                          IsPrimary="true">
                                                         @UpsertType.ToUpper()
                                                     </SfButton>
                                                 }
@@ -135,9 +160,9 @@
                                                 {
 
                                                     <SfButton CssClass="e-primary"
-                                                              IconCss="fa-solid fa-trash"
-                                                              IconPosition="IconPosition.Right"
-                                                              IsPrimary="true">
+                                                          IconCss="fa-solid fa-trash"
+                                                          IconPosition="IconPosition.Right"
+                                                          IsPrimary="true">
                                                         @UpsertType.ToUpper()
                                                     </SfButton>
                                                 }
@@ -161,7 +186,7 @@
                                               Text="Preview"
                                               TextAlign="left"
                                               Icon="fa-solid fa-check"
-                                              IconSize="1.5rem"/>
+                                              IconSize="1.5rem" />
                             </FmHeader>
                             <FmBody>
 
@@ -175,11 +200,11 @@
                                               Text="Form Validation"
                                               TextAlign="left"
                                               Icon="fa-solid fa-check"
-                                              IconSize="1.5rem"/>
+                                              IconSize="1.5rem" />
                             </FmHeader>
                             <FmBody>
-                                <DataAnnotationsValidator/>
-                                <ValidationSummary/>
+                                <DataAnnotationsValidator />
+                                <ValidationSummary />
                             </FmBody>
                         </FmCard>
                     </div>
@@ -201,7 +226,7 @@
             <Header>Your request is being processed</Header>
             <Content>
                 <FmSpacer />
-                <SfSpinner Size="50" Visible="true"/>
+                <SfSpinner Size="50" Visible="true" />
                 <FmSpacer />
             </Content>
         </DialogTemplates>
